observability/gateways/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-istio-gateway
  namespace: todo
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: istio-system

  to:
  - group: ""
    kind: Service
